--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
