--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/styles": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +15,13 @@
     "jquery": "^3.6.4",
     "mixitup": "^3.3.1",
     "npm": "^9.7.1",
+    "primereact": "^9.5.0",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-speed-dial": "^0.5.2",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
