--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "aalouchi",
   "version": "0.1.0",
   "private": true,
+  "peerDependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+   }
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
