--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "install": "^0.13.0",
     "jquery": "^3.6.4",
+    "jwt-decode": "^3.1.2",
     "mixitup": "^3.3.1",
     "npm": "^9.7.1",
     "react": "^18.2.0",
